log/build_2025-04-06_20-28-32/my_pi_pkg/stderr.log
  File "/home/amane/ros2_practice/install/my_pi_pkg/lib/python3.12/site-packages/my_pi_pkg/my_first_node.py", line 14
    self.get_logger().info("Hello"  str(self.counter_))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

